--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="app.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js" defer></script>
-  <script src="./js/phone-catalogue.js" defer></script>
-  <script src="./js/phone-page.js" defer></script>
-  <script src="./js/app.js" defer></script>
+  <script src="index.js" defer></script>
 </head>
 <body>
   <div class="container-fluid" data-component="phone-page">
