--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="../public/app.css">
+  <link rel="stylesheet" href="app.css">
+
+  <script src="index.js" defer></script>
 </head>
 <body>
   <div class="container-fluid" data-component="phone-page">
@@ -12,12 +14,12 @@
       <div class="col-md-2">
         <!--Sidebar content-->
 
-        <p>
+        <p data-component="filter">
           Search:
           <input>
         </p>
 
-        <p>
+        <p data-component="sorter">
           Sort by:
           <select>
             <option value="name">Alphabetical</option>
@@ -25,7 +27,7 @@
           </select>
         </p>
 
-        <div>
+        <div data-component="shopping-cart">
           <h4>Shopping cart</h4>
           <ul>
             <li>1</li>
@@ -39,13 +41,13 @@
         <!--Body content-->
         <div data-component="phone-catalogue"></div>
 
-        <div data-component="phone-details"></div>
+        <div data-component="phone-viewer"
+             class="js-hidden">
+        </div>
 
       </div>
     </div>
   </div>
 
-  <script type="text/javascript" src="index.js"></script>
-  <script type="text/javascript" src="login.js"></script>
 </body>
 </html>
