--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,7 @@
           </select>
         </p>
 
-        <div data-component="shopping-cart">
-          <h4>Shopping cart</h4>
-          <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-          </ul>
-        </div>
+        <div data-component="shopping-cart"></div>
 
       </div>
       <div class="col-md-10">
